src/assets/styles/theme/layout.scss
html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

.container {
  width: 90%;
  max-width: 1300px;
  margin: 0 auto;
  height: 100%;
}

.page {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  main {
    flex: 1;
  }
}

.with-bg-image {
  position: relative;
  .background-image {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
    z-index: 1;
  }
  .overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 2;
    background: rgba(0, 0, 0, 0.95);
  }
  .container {
    position: relative;
    z-index: 3;
  }
}

.padded-section {
  padding: 50px 0;
}

.hidden {
  opacity: 0;
  transform: scale(0.7);
  transition: opacity 0.4s, transform 0.8s;
}
.hidden.in-viewport {
  opacity: 1;
  transform: scale(1);
}

.value-section {
  margin: 10px 0;
  .fade-in {
    @include fade-in-up-from-left;
  }
}

.mockup {
  $screen_width: 415px;
  $screen_height: 600px;
  position: absolute;
  top: 50%;
  left: 50%;
  width: $screen_width;
  height: $screen_height;
  margin-left: -($screen_width / 2);
  margin-top: -($screen_height / 2);
  pointer-events: none;
  .phone-shell {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
  }
  .screen-container {
    position: absolute;
    top: 137px;
    left: 114px;
    width: 184px;
    height: 328px;
    z-index: 1;
    overflow: hidden;
    .screen {
      width: 100%;
    }
  }
  &.item-overview {
    .Masthead__image {
      height: 350%;
    }
  }
  &.large {
    $screen_width: 525px;
    $screen_height: 760px;
    width: $screen_width;
    height: $screen_height;
    margin-left: -($screen_width / 2);
    margin-top: -($screen_height / 2);
    .screen-container {
      top: 174px;
      left: 144px;
      width: 232px;
      height: 414px;
    }
  }
  @media only screen and (min-width: $xxxlarge) {
    $screen_width: 465px;
    $screen_height: 670px;
    width: $screen_width;
    height: $screen_height;
    margin-left: -($screen_width / 2);
    margin-top: -($screen_height / 2);
    .screen-container {
      top: 153px;
      left: 128px;
      width: 205px;
      height: 366px;
    }
  }
}

.angle-split {
  position: relative;
  .col-lt {
    padding: 50px 0 250px;
    background: #f1f1f1;
    clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
  }
  .col-rt {
    padding: 250px 0 50px;
    background: #f1f1f1;
    clip-path: polygon(0 4%, 100% 0, 100% 100%, 0 100%);
  }
  &.angle-color {
    .col-lt {
      background: $green;
    }
    .col-rt {
      background: $lightblue;
    }
    h2,
    p,
    li {
      color: white;
    }
  }
  @media only screen and (min-width: $large) {
    display: flex;
    justify-content: space-between;
    .col-lt,
    .col-rt {
      width: 50%;
      transition: 0.4s;
      > .container {
        width: 400px;
        box-sizing: content-box;
      }
      &.padded-section {
        transition: 0.4s;
      }
      &:hover {
        background: #e4e4e4;
      }
    }
    .col-lt {
      clip-path: polygon(0 0, 100% 0, calc(100% - 65px) 100%, 0 100%);
      padding: 200px 0;
      width: calc(50% + 35px);
      > .container {
        margin: 0 150px 0 5vw;
        @media only screen and (min-width: 1440px) {
          margin: 0 auto 0 calc((100vw - 1300px) / 2);
        }
      }
    }
    .col-rt {
      clip-path: polygon(65px 0, 100% 0, 100% 100%, 0 100%);
      padding: 280px 0 200px;
      width: calc(50% + 35px);
      margin-left: -55px;
      > .container {
        margin: 0 5vw 0 auto;
        @media only screen and (min-width: 1440px) {
          margin: 0 calc((100vw - 1300px) / 2) 0 auto;
        }
      }
    }
    &.angle-color {
      .col-lt:hover {
        background: darken($green, 10%);
      }
      .col-rt:hover {
        background: darken($lightblue, 10%);
      }
    }
  }
  @media only screen and (min-width: $xxxlarge) {
    .col-lt,
    .col-rt {
      > .container {
        width: 460px;
      }
    }
  }
}

